# Re-QRMai

./: .gitignore  Cargo.toml  README.md  build.nu  config.json
.github/workflows/: build-windows.yml  rust.yml
extension/: background.js  manifest.firefox.json  manifest.json  options.html  options.js
img/: README.txt
src/: detect.rs  main.rs  mouse.rs  wechat.rs
templates/: login.html  settings.html
