[package]
name = "QRMai-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
enigo = "0.6.1"
flexi_logger = { version = "0.31.9", features = ["colors"] }
time = { version = "0.3", features = ["formatting"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
template-matching = { version = "0.2.0", features = ["image"] }
libc = "0.2"
log = "0.4"
qrcode = "0.14.1"
regex = "1"
rocket = { version = "0.5.1", features = ["json", "secrets"] }
minijinja = { version = "2", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ureq = "3"
zedbar = { version = "0.4.1", default-features = false, features = ["qrcode"] }


[target.'cfg(target_os = "linux")'.dependencies]
grim-rs = "0.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "2.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "8.0.0"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[target.'cfg(target_os = "linux")']
# mold，如果您有 GCC 12+
rustflags = ["-C", "link-arg=-fuse-ld=wild"]

[resolver]
feature-unification = "workspace"

[profile.release]
codegen-units = 1
opt-level = "z"
strip = "symbols"
lto = "fat"
panic = "abort"
